--- a/public/locales/en/projects.json
+++ b/public/locales/en/projects.json
@@ -12,7 +12,7 @@
             "description": "An AI-driven search engine designed specifically for discovering YouTube podcasters and their content.",
             "href": "https://horsy.ai",
             "picture": "/images/projects/horsy.png",
-            "hidden": true,
+            "hidden": false,
             "skills": ["React", "Next.js", "MUI", "Docker", "React Hook Form"]
         },
         {
@@ -21,22 +21,23 @@
             "href": "https://www.vanguards.dev",
             "github": "https://github.com/VanguardDevs/vanguards.dev",
             "picture": "/images/projects/VanguardDevs.png",
-            "hidden": false
+            "hidden": true
         },
         {
             "name": "MiRewards",
             "description":  "Redesign of a website for an agency (Stampfeet), with a focus on supporting a redemption process for rewards and localization.",
             "picture": "/images/projects/MiRewards.png",
             "href": "https://mi-rewards.com/",
-            "hidden": true,
+            "hidden": false,
             "skills": ["React", "Next.js", "Theme.UI", "React Hook Form"]
         },
         {
             "name": "Approbado",
             "description": "Approbado web application that offers a gamified e-learning experience based on trivia about subjects related to Lawyers.",
-            "picture": "/images/npm.webp",
-            "hidden": true,
-            "skills": ["React", "Vite", "MUI", "Express", "Postgres", "Node.js", "Redux"]
+            "picture": "/images/projects/approbado.png",
+            "hidden": false,
+            "skills": ["React", "Vite", "MUI", "Express", "Postgres", "Node.js", "Redux"],
+            "github": "https://github.com/jodaz/approbado"
         },
         {
             "name": "Circuito1App",
@@ -44,33 +45,34 @@
             "picture": "/images/npm.webp",
             "github": "https://github.com/jodaz/votes",
             "href": "https://votes.jodaz.dev",
-            "hidden": false
+            "hidden": true
         },
         {
             "name": "SAI Frontend",
             "description": "SAI is a web application designed to streamline and enhance the management of social care services. It provides statistics and charts of attendances for informed decision-making and resource allocation.",
             "github": "https://github.com/jodaz/sai-frontend",
             "picture": "/images/npm.webp",
-            "hidden": false
+            "hidden": true
         },
         {
             "name": "Sauco",
             "description": "SAUCO is a CRM platform tailored for tax collection and management.",
             "github": "https://github.com/VanguardDevs/sauco",
-            "picture": "/images/npm.webp",
-            "hidden": false
+            "picture": "/images/projects/sauco_logo.png",
+            "hidden": false,
+            "skills": ["Laravel", "jQuery", "Postgres", "React", "PHP", "Nginx"]
         },
         {
             "name": "TinderDogs Frontend",
             "description": "TinderDogs was an unique application inspired by the functionality of Tinder. Designed to connect pet lovers and local pet businesses, this platform offers a variety of features to enhance the pet ownership experience.",
             "picture": "/images/npm.webp",
-            "hidden": false
+            "hidden": true
         },
         {
             "name": "Perrfecto Frontend",
             "description": "Perrfecto is an Instagram inspired social media application that celebrates the love for dogs and pets. Includes features like a photo editor, real-time chat, and a friends following system.",
             "picture": "/images/npm.webp",
-            "hidden": false
+            "hidden": true
         },
         {
             "name": "Markdown Previewer",
@@ -78,7 +80,7 @@
             "picture": "/images/projects/MarkdownPreviewer.png",
             "github": "https://github.com/jodaz/markdown-previewer",
             "href": "https://jodaz.github.io/markdown-previewer/",
-            "hidden": false
+            "hidden": true
         }
     ]
 }
