--- a/public/locales/es/projects.json
+++ b/public/locales/es/projects.json
@@ -32,11 +32,12 @@
             "skills": ["React", "Next.js", "Theme.UI", "React Hook Form"]
         },
         {
-            "name": "Approbado",
-            "description": "Approbado es una aplicación web que ofrece una experiencia de aprendizaje electrónica gamificada basada en preguntas sobre temas relacionados con abogados.",
+            "name": "Approbado Admin",
+            "description": "Approbado es una aplicación web que ofrece una experiencia de aprendizaje gamificada basada en preguntas sobre temas relacionados con abogados.",
             "picture": "/images/projects/approbado.png",
             "hidden": false,
             "skills": ["React", "Vite", "MUI", "Express", "Postgres", "Node.js", "Redux"],
+            "href": "https://www.admin.approbado.jodaz.dev",
             "github": "https://github.com/jodaz/approbado"
         },
         {
