show hashnode articles on portfolio

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -10,5 +10,7 @@
         "intro": "This website is ",
         "link": "open source."
     },
-    "building": "Currently building this page!"
+    "building": "Currently building this page!",
+    "articles": "Blog posts",
+    "minutes": "minutes"
 }
