--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -10,5 +10,7 @@
         "intro": "Este sitio es de ",
         "link": "código abierto."
     },
-    "building": "Actualmente construyo ésta página!"
+    "building": "Actualmente construyo ésta página!",
+    "articles": "Publicaciones",
+    "minutes": "minutos"
 }
