--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -5,6 +5,7 @@
     "About": "About",
     "Projects": "Projects",
 	"position": "Developer",
+    "cv": "Get resume",
 	"bio": "with 4+ years of experience as a Web Developer working with ReactJS, NodeJS, and Laravel. Experienced in agile teams, debugging, and optimizing web applications.",
     "footer": {
         "intro": "This website is ",
